--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
     <p>This page will show you where the apple app store is located and how to safely download the apps that you want.</p>
     <h2>Leisure</h2>
     <dl>
-        <dt><h3>Social</h3></dt>
+        <dt class="section-heading">Social</dt>
         <dd>Essential apps that you will need to chat with friends and follow the newest trends.</dd>
-        <dt><h3>Entertainment</h3></dt>
+        <dt class="section-heading">Entertainment</dt>
         <dd>This can include gaming apps or videostreaming apps.</dd>
     </dl>
     <h2>Production</h2>
     <dl>
-        <dt><h3>Personal</h3></dt>
+        <dt class="section-heading">Personal</dt>
         <dd>This would include apps for your banks or investments.</dd>
-        <dt><h3>Workspace</h3></dt>
+        <dt class="section-heading">Workspace</dt>
         <dd>This can include word doucments, your email, or transportation apps.</dd>
     </dl>
     <p>For exact apple app store policies, visit <a href="https://www.apple.com/legal/privacy/data/en/app-store/" target="_blank" rel="noopener noreferrer">App Store & Privacy</a>.</p>
